--- a/index.html
+++ b/index.html
@@ -18,6 +18,36 @@
     <script defer src="./js/script.js"></script>
 </head>
 <body>
-    
+    <div class="container-fluid m-0 p-0 g-0">
+        <header class="row m-0 p-0 g-0">
+                <div class="col-12 m-0 p-0 g-0">
+                    <div>
+                        <img src="./assets/logo_sfondo.jpg" alt="logo">
+                    </div>
+                </div>
+        </header>     
+        <div class="row m-0 p-0 g-0">
+            <div class="col-12 m-0 p-0 g-0">
+                    <nav class="navbar m-0 p-0 g-0 navbar-expand-lg bg-light">
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                              <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link" href="#">Link</a>
+                              </li>
+                              <li class="nav-item">
+                                <a class="nav-link disabled">Disabled</a>
+                              </li>
+                            </ul>
+                        </div>
+                    </nav>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
