--- a/index.html
+++ b/index.html
@@ -19,35 +19,50 @@
 </head>
 <body>
     <div class="container-fluid m-0 p-0 g-0">
-        <header class="row m-0 p-0 g-0">
-                <div class="col-12 m-0 p-0 g-0">
-                    <div>
-                        <img src="./assets/logo_sfondo.jpg" alt="logo">
+        <header class="row m-0 p-0 g-0 header__contenedor">
+                <div class="col-12 m-0 p-0 g-0 header__contenedor-logo">
+                    <div class="logo">
+                        <img src="./assets/logo_sfondo2.png" alt="logo">
                     </div>
                 </div>
-        </header>     
-        <div class="row m-0 p-0 g-0">
-            <div class="col-12 m-0 p-0 g-0">
-                    <nav class="navbar m-0 p-0 g-0 navbar-expand-lg bg-light">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                              <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
-                              </li>
-                              <li class="nav-item">
-                                <a class="nav-link disabled">Disabled</a>
-                              </li>
-                            </ul>
-                        </div>
-                    </nav>
+        </header>
+    </div>
+    <div class="container-fluid m-0 p-0 g-0">
+        <main class="row m-0 p-0 g-0">
+            <div class="col-12 col-md-6 m-0 p-0 g-0 contenedor_tarjeta1">
+                <div class="tarjeta__uno">
+                    <div class="tarjeta__uno-imagen">
+                        <img src="./assets/prest.jpg" alt="prestamo">
+                    </div>
+                    <div class="tarjeta__uno-contenido">
+                        <h3>Prestamos Personales</h3>
+                        <p>Simula tu prestamo personal</p>
+                        <a href="#">Simular</a> 
+                    </div>
+                </div>
             </div>
-        </div>
+            <div class="col-12 col-md-6 m-0 p-0 g-0 contenedor_tarjeta2">
+                <div class="tarjeta__dos">
+                    <div class="tarjeta__dos-imagen">
+                        <img src="./assets/depo.jpg" alt="plazofijo">
+                    </div>
+                    <div class="tarjeta__dos-contenido">
+                        <h3>Plazo Fijo</h3>
+                        <p>Simula tu plazo fijo</p>
+                        <a href="#">Simular</a> 
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
+    <div class="container-fluid m-0 p-0 g-0">
+        <footer class="row m-0 p-0 g-0 footer__contenedor">
+                <div class="col-12 m-0 p-0 g-0 footer__contenedor-contenido">
+                    <div class="contenido">
+                        <p>Leo Potatoe - todos los derechos reservados - 2022</p>  
+                    </div>
+                </div>
+        </footer>
     </div>
 </body>
 </html>
