Actualizado 3ra entrega

--- a/secciones/plazofijo.html
+++ b/secciones/plazofijo.html
@@ -29,9 +29,9 @@
     </div>
     <div class="container-fluid m-0 p-0 g-0">
         <main class="row m-0 p-0 g-0">
-            <div class="col-12 m-0 p-0 g-0">
-                <div>
-                    <H2>simulador de plazo fijo </H2>
+            <div class="col-12 m-0 p-0 g-0 plazofijo">
+                <div class="plazofijo__titulo">
+                    <H2>simulador de plazo fijo</H2>
                 </div>
                 <form id="plazofijo" action="" method="" enctype="">
                     <div>
@@ -41,6 +41,10 @@
                     <div>
                         <h4>Ingresá el plazo</h4>
                         <input type="number" name="num" min="30" max="365 ">
+                    </div>
+                    <div>
+                        <h4>Ingresá el tasa (TNA)</h4>
+                        <input type="number" name="num" min="1" max="365 ">
                     </div>
                     <div>
                         <h4>¿Cuanto ganarás con tu plazo fijo?</h4>
