--- a/secciones/ppersonal.html
+++ b/secciones/ppersonal.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <title>proyecto js</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DynaPuff&display=swap" rel="stylesheet">
@@ -15,45 +15,65 @@
     <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>   
-    <script defer src="./js/script.js"></script>
+    <script defer src="../js/script.js"></script>
 </head>
 <body>
     <div class="container-fluid m-0 p-0 g-0">
         <header class="row m-0 p-0 g-0 header__contenedor">
                 <div class="col-12 m-0 p-0 g-0 header__contenedor-logo">
                     <div class="logo">
-                        <img src="./assets/logo_sfondo2.png" alt="logo">
+                        <img src="../assets/logo_sfondo2.png" alt="logo">
                     </div>
                 </div>
         </header>
     </div>
     <div class="container-fluid m-0 p-0 g-0">
         <main class="row m-0 p-0 g-0">
-            <div class="col-12 col-md-6 m-0 p-0 g-0 contenedor_tarjeta1">
-                <div class="tarjeta__uno">
-                    <div class="tarjeta__uno-imagen">
-                        <img src="./assets/prest.jpg" alt="prestamo">
-                    </div>
-                    <div class="tarjeta__uno-contenido">
-                        <h3>Prestamos Personales</h3>
-                        <p>Simula tu prestamo personal</p>
-                        <a href="#">Simular</a> 
-                    </div>
+            <div class="col-12 m-0 p-0 g-0 prespersonal">
+                <div class="prespersonal__titulo">
+                    <H2>simulador de prestamo personal</H2>
                 </div>
-            </div>
-            <div class="col-12 col-md-6 m-0 p-0 g-0 contenedor_tarjeta2">
-                <div class="tarjeta__dos">
-                    <div class="tarjeta__dos-imagen">
-                        <img src="./assets/depo.jpg" alt="plazofijo">
+                <form id="prespersonal" action="" method="" enctype="">
+                    <div class="fecha">
+                        <h4>Ingresá la fecha</h4>
+                        <input type="date" name="fecha">
                     </div>
-                    <div class="tarjeta__dos-contenido">
-                        <h3>Plazo Fijo</h3>
-                        <p>Simula tu plazo fijo</p>
-                        <a href="#">Simular</a> 
+                    <div>
+                        <h4>Ingresá el Monto</h4>
+                        <input class="monto" type="number" name="num">
                     </div>
-                </div>
+                    <div>
+                        <h4>Ingresá el plazo</h4>
+                        <input class="plazo" type="number" name="num" min="12" max="5000">
+                    </div>
+                    <div>
+                        <h4>Ingresá la tasa (TNA)</h4>
+                        <input  class="tna" type="number" name="num" min="1" max="365 ">
+                    </div>
+                    <div>
+                        <h4>¿Cuanto pagaras por tu prestamo personal?</h4>
+                    </div>
+                    <div>
+                        <input type="button" id="calcular" value="Calcular">
+                        <input type="button" id="reset" value="Borrar Simulacion">
+                        <input type="button" id="ultima" value="Ultima simulacion">
+                    </div>
+                </form>  
             </div>
         </main>
+        <section class="confirmacion">
+            <div class="confirmacion__lista">
+                <h2>Los datos de tu simulación</h2>
+                <ul>
+
+                    
+
+                    
+                </ul>
+            </div>
+        </section>
+        <section class="resultado">
+        </section>
     </div>
     <div class="container-fluid m-0 p-0 g-0">
         <footer class="row m-0 p-0 g-0 footer__contenedor">
