--- a/secciones/ppersonal.html
+++ b/secciones/ppersonal.html
@@ -62,16 +62,17 @@
             <div class="confirmacion__lista">
                 <h2>Los datos de tu simulación</h2>
                 <table id="lista_tabla" class="tabla">
-                    <thead>
+                    <thead class="cabeza">
                         <tr>
                             <th>Fecha</th>
                             <th>Cuota</th>
                             <th>Capital</th>
                             <th>Interés</th>
+                            <th>Impuesto</th>
                             <th>Saldo</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="cuerpo">
                         
                     </tbody>
                 </table>
