--- a/index.html
+++ b/index.html
@@ -57,6 +57,21 @@
         </main>
     </div>
     <div class="container-fluid m-0 p-0 g-0">
+        <div class="row m-0 p-0 g-0">
+            <div class="col-12 col-md-6 m-0 p-0 g-0">
+                <section>
+                    <h2></h2>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                    <p></p>
+                </section>
+            </div>
+        </div>
+    </div>   
+    <div class="container-fluid m-0 p-0 g-0">
         <footer class="row m-0 p-0 g-0 footer__contenedor">
                 <div class="col-12 m-0 p-0 g-0 footer__contenedor-contenido">
                     <div class="contenido">
