--- a/secciones/ppersonal.html
+++ b/secciones/ppersonal.html
@@ -37,7 +37,7 @@
                 <form id="prespersonal" action="" method="" enctype="">
                     <div>
                         <h4>Ingresá el Monto</h4>
-                        <input id="monto" type="number" name="num">
+                        <input id="capital" type="number" name="num">
                     </div>
                     <div>
                         <h4>Ingresá el plazo</h4>
@@ -62,7 +62,7 @@
             <div class="confirmacion__lista">
                 <h2>Los datos de tu simulación</h2>
                 <table id="lista_tabla" class="tabla">
-                    <thead class="cabeza">
+                    <thead id="cabeza">
                         <tr>
                             <th>Fecha</th>
                             <th>Cuota</th>
@@ -72,7 +72,7 @@
                             <th>Saldo</th>
                         </tr>
                     </thead>
-                    <tbody class="cuerpo">
+                    <tbody id="cuerpo">
                         
                     </tbody>
                 </table>
