--- a/index.html
+++ b/index.html
@@ -59,15 +59,9 @@
     <div class="container-fluid m-0 p-0 g-0">
         <div class="row m-0 p-0 g-0">
             <div class="col-12 col-md-6 m-0 p-0 g-0">
-                <section>
-                    <h2></h2>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                    <p></p>
-                </section>
+                  <div id="section">
+
+                  </div>  
             </div>
         </div>
     </div>   
