Actualizado para entregar

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="tarjeta__uno-contenido">
                         <h3>Prestamos Personales</h3>
                         <p>Simula tu prestamo personal</p>
-                        <a href="#">Simular</a> 
+                        <a href="./secciones/ppersonal.html">Simular</a> 
                     </div>
                 </div>
             </div>
@@ -56,12 +56,12 @@
             </div>
         </main>
     </div>
-    <div class="container-fluid m-0 p-0 g-0">
-        <div class="row m-0 p-0 g-0">
-            <div class="col-12 col-md-6 m-0 p-0 g-0">
-                  <div id="section">
-
-                  </div>  
+    <div class="container-fluid m-0 p-0 g-0 api__contenedor">
+        <div class="row m-0 p-0 g-0 api__contenedor-row">
+            <div class="col-12 m-0 p-0 g-0 api__contenedor-col">
+                <div id="section">
+                    
+                </div>  
             </div>
         </div>
     </div>   
