--- a/secciones/ppersonal.html
+++ b/secciones/ppersonal.html
@@ -37,7 +37,7 @@
                 <form id="prespersonal" action="" method="" enctype="">
                     <div>
                         <h4>Ingresá el Monto</h4>
-                        <input id="capital" type="number" name="num">
+                        <input id="monto" type="number" name="num">
                     </div>
                     <div>
                         <h4>Ingresá el plazo</h4>
